[package]
name = "vl53l4ed"
version = "0.1.0"
edition = "2024"

license = "MIT or Apache 2.0"

[dependencies]
defmt = { version = "1.0.1", optional = true }
embedded-hal-async = "1.0"
futures-util = { version = "0.3", default-features = false }

[features]
defmt-03 = ["dep:defmt", "embedded-hal-async/defmt-03"]
std = []
default = ["std"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]